--- a/static/style.css
+++ b/static/style.css
@@ -1,29 +1,80 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     display: flex;
+    font-family: system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Droid Sans,Helvetica Neue;
+    color: #000;
+    width: 100svw;
+    height: 100svh;
+    padding: 0;
+    margin: 0;
+    line-height: 1rem;
+}
+
+#devices {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 360px;
+    margin: 1.5rem;
+    background-color: #fff;
+    border-radius: .75rem;
+    z-index: 9999;
+    max-height: 100%;
+    overflow-y: auto;
+    padding: 0.75rem;
+    cursor: pointer;
+}
+
+#devices h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    padding: .25rem;
+    line-height: normal;
+}
+
+#devices .device {
+    display: flex;
     flex-direction: row;
-    height: 94vh;
-    width: 95vw;
-    background-color: #181F2D;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #fff;
+    gap: .5rem;
+    border-radius: .65rem;
+    align-items: center;
+    padding: 0 1rem;
 }
 
-.left {
-    flex: 0 0 30%;
-    overflow-y: scroll;
+#devices .device img {
+    width: 35px;
+    height: 35px;
+    background: #fff;
+    border-radius: 50%;
 }
 
-.center {
-    text-align: center;
+#devices .device div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1rem .5rem;
+    border-radius: .65rem;
+    gap: 0.25rem;
 }
 
-.right {
-    flex: 0 0 70%;
-    margin-top: 1em;
-    margin-bottom: 1em;
+#devices .device:hover {
+    background-color: #eaeaea;
 }
 
-hr {
-    color: #fff;
+#devices .device h3 {font-size: 1rem;}
+#devices .device p {
+    font-size: .85rem;
+    font-weight: 300;
+    color: gray;
+}
 
+#map {
+    width: 100%;
+    height: 100%;
 }
