--- a/static/style.css
+++ b/static/style.css
@@ -48,10 +48,12 @@ body {
 }
 
 #devices .device img {
-    width: 35px;
-    height: 35px;
+    width: 40px;
+    height: 40px;
+    padding: 2.5px;
     background: #fff;
     border-radius: 50%;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, .1);
 }
 
 #devices .device div {
