--- a/static/style.css
+++ b/static/style.css
@@ -25,7 +25,7 @@ body {
     background-color: #fff;
     border-radius: .75rem;
     z-index: 9999;
-    max-height: 100%;
+    max-height: 75%;
     overflow-y: auto;
     padding: 0.75rem;
     cursor: pointer;
@@ -47,7 +47,11 @@ body {
     padding: 0 1rem;
 }
 
-#devices .device img {
+#devices .device img, #devices .device span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 0 0 40px;
     width: 40px;
     height: 40px;
     padding: 2.5px;
