--- a/static/style.css
+++ b/static/style.css
@@ -20,7 +20,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 360px;
+    max-width: 360px;
+    width: 100%;
     margin: 1.5rem;
     background-color: #fff;
     border-radius: .75rem;
