--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,6 @@ body {
     z-index: 9999;
     max-height: 75%;
     overflow-y: auto;
-    padding: 0.75rem;
     cursor: pointer;
 }
 
@@ -37,6 +36,15 @@ body {
     font-weight: 600;
     padding: .25rem;
     line-height: normal;
+    padding: 1rem 1rem .5rem;
+    position: sticky;
+    top: 0;
+    background-color: rgba(255, 255, 255, .8);
+    backdrop-filter: blur(20px);
+}
+
+#devices-list #devices {
+    padding: 0 .75rem .75rem;
 }
 
 #devices-list .device {
